--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
     <h2>Section 3 – Projects</h2>
 
     <div class="project-card">
-        <h3>Java Billing System</h3>
-        <p>Developed using Java Swing with GUI components.</p>
-    </div>
-
-    <div class="project-card">
-        <h3>File Handling Project</h3>
-        <p>Implemented file read/write operations in Java.</p>
+        <h3>Java Food Delivery Order System</h3>
+        <p>
+            Developed a food delivery ordering system using Java.
+            Implemented menu selection, order processing,
+            billing calculation, and user interaction features.
+        </p>
+        <p><strong>Technology Used:</strong> Java</p>
     </div>
 
 </section>
