--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             text-align: center;
             font-size: 28px;
             font-weight: bold;
-            letter-spacing: 1px;
         }
 
         section {
@@ -109,9 +108,21 @@
 <!-- Section 4 -->
 <section>
     <h2>Section 4 – Certifications</h2>
+
     <p><strong>Course:</strong> The Sustainable Development Goals - A Global Interdisciplinary Vision for the Future</p>
     <p><strong>Platform:</strong> Coursera</p>
     <p><strong>Date:</strong> 11/02/2026</p>
+
+    <br>
+
+    <p><strong>Course:</strong> Active Listening: Enhancing Communication Skills</p>
+    <p><strong>Platform:</strong> Coursera</p>
+
+    <br>
+
+    <p><strong>Course:</strong> Introduction to Visual Basic Programming</p>
+    <p><strong>Platform:</strong> Coursera</p>
+
 </section>
 
 <!-- Section 5 -->
