--- a/index.html
+++ b/index.html
@@ -60,18 +60,16 @@
     S.Kaviya | Student Portfolio
 </header>
 
-<!-- Section 1 -->
 <section>
-    <h2>Section 1 – Student Profile</h2>
+    <h2>About Me</h2>
     <p><strong>Name:</strong> S.Kaviya</p>
     <p><strong>Roll Number:</strong> RA2411003050232</p>
     <p><strong>Email:</strong> kaviyasivaji217@gmail.com</p>
     <p><strong>Skills:</strong> C, Python, Java</p>
 </section>
 
-<!-- Section 2 -->
 <section>
-    <h2>Section 2 – Academic Details</h2>
+    <h2>Education</h2>
     <p><strong>CGPA:</strong> 8.61</p>
 
     <h3>Courses Completed</h3>
@@ -89,9 +87,8 @@
     </ul>
 </section>
 
-<!-- Section 3 -->
 <section>
-    <h2>Section 3 – Projects</h2>
+    <h2>Projects</h2>
 
     <div class="project-card">
         <h3>Java Food Delivery Order System</h3>
@@ -105,9 +102,8 @@
 
 </section>
 
-<!-- Section 4 -->
 <section>
-    <h2>Section 4 – Certifications</h2>
+    <h2>Certifications</h2>
 
     <p><strong>Course:</strong> The Sustainable Development Goals - A Global Interdisciplinary Vision for the Future</p>
     <p><strong>Platform:</strong> Coursera</p>
@@ -125,9 +121,8 @@
 
 </section>
 
-<!-- Section 5 -->
 <section>
-    <h2>Section 5 – Achievements</h2>
+    <h2>Achievements</h2>
     <ul>
         <li>Participated in Hackathon</li>
         <li>CodeCraft'25 Hackathon</li>
