--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>S.Kaviya - Portfolio</title>
+
     <style>
         body {
             margin: 0;
@@ -12,7 +13,7 @@
 
         header {
             background: #1e293b;
-            padding: 20px;
+            padding: 25px;
             text-align: center;
             font-size: 28px;
             font-weight: bold;
@@ -22,7 +23,7 @@
             padding: 30px;
             margin: 20px;
             background: #1e293b;
-            border-radius: 10px;
+            border-radius: 12px;
             box-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
 
@@ -34,6 +35,10 @@
 
         ul {
             line-height: 1.8;
+        }
+
+        .course-list {
+            columns: 2;
         }
 
         .project-card {
@@ -73,17 +78,40 @@
     <p><strong>CGPA:</strong> 8.61</p>
 
     <h3>Courses Completed</h3>
-    <ul>
+
+    <ul class="course-list">
+        <li>Japanese</li>
+        <li>Calculus and Linear Algebra</li>
+        <li>Chemistry</li>
+        <li>Introduction to Computational Biology</li>
         <li>Programming for Problem Solving</li>
+        <li>Philosophy of Engineering</li>
+        <li>Basic Civil and Mechanical Workshop</li>
+        <li>Physical and Mental Health Using Yoga</li>
+        <li>Communicative English</li>
+        <li>Constitution of India</li>
+        <li>Advanced Calculus and Complex Analysis</li>
+        <li>Semiconductor Physics and Computational Methods</li>
+        <li>Electrical and Electronics Engineering</li>
         <li>Object Oriented Design and Programming</li>
+        <li>Environmental Science</li>
+        <li>General Aptitude</li>
+        <li>Engineering Graphics and Design</li>
+        <li>Transforms and Boundary Value Problems</li>
         <li>Data Structures and Algorithms</li>
         <li>Operating Systems</li>
         <li>Computer Organization and Architecture</li>
         <li>Advanced Programming Practice</li>
-        <li>Engineering Graphics and Design</li>
-        <li>Environmental Science</li>
+        <li>Design Thinking and Methodology</li>
         <li>Professional Ethics</li>
-        <li>General Aptitude</li>
+        <li>Probability and Queueing Theory</li>
+        <li>Design and Analysis of Algorithms</li>
+        <li>Database Management Systems</li>
+        <li>Artificial Intelligence</li>
+        <li>Internet of Things</li>
+        <li>Social Engineering</li>
+        <li>Universal Human Values – II: Understanding Harmony and Ethical Human Conduct</li>
+        <li>Programming for Financial Technologies</li>
     </ul>
 </section>
 
@@ -105,19 +133,18 @@
 <section>
     <h2>Certifications</h2>
 
-    <p><strong>Course:</strong> The Sustainable Development Goals - A Global Interdisciplinary Vision for the Future</p>
-    <p><strong>Platform:</strong> Coursera</p>
-    <p><strong>Date:</strong> 11/02/2026</p>
+    <p><strong>The Sustainable Development Goals - A Global Interdisciplinary Vision for the Future</strong></p>
+    <p>Platform: Coursera | Date: 11/02/2026</p>
 
     <br>
 
-    <p><strong>Course:</strong> Active Listening: Enhancing Communication Skills</p>
-    <p><strong>Platform:</strong> Coursera</p>
+    <p><strong>Active Listening: Enhancing Communication Skills</strong></p>
+    <p>Platform: Coursera</p>
 
     <br>
 
-    <p><strong>Course:</strong> Introduction to Visual Basic Programming</p>
-    <p><strong>Platform:</strong> Coursera</p>
+    <p><strong>Introduction to Visual Basic Programming</strong></p>
+    <p>Platform: Coursera</p>
 
 </section>
 
