--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
             line-height: 1.8;
         }
 
-        .course-list {
-            columns: 2;
-        }
-
         .project-card {
             background: #334155;
             padding: 15px;
@@ -77,41 +73,18 @@
     <h2>Education</h2>
     <p><strong>CGPA:</strong> 8.61</p>
 
-    <h3>Courses Completed</h3>
-
-    <ul class="course-list">
-        <li>Japanese</li>
-        <li>Calculus and Linear Algebra</li>
-        <li>Chemistry</li>
-        <li>Introduction to Computational Biology</li>
-        <li>Programming for Problem Solving</li>
-        <li>Philosophy of Engineering</li>
-        <li>Basic Civil and Mechanical Workshop</li>
-        <li>Physical and Mental Health Using Yoga</li>
-        <li>Communicative English</li>
-        <li>Constitution of India</li>
-        <li>Advanced Calculus and Complex Analysis</li>
-        <li>Semiconductor Physics and Computational Methods</li>
-        <li>Electrical and Electronics Engineering</li>
-        <li>Object Oriented Design and Programming</li>
-        <li>Environmental Science</li>
-        <li>General Aptitude</li>
-        <li>Engineering Graphics and Design</li>
-        <li>Transforms and Boundary Value Problems</li>
-        <li>Data Structures and Algorithms</li>
-        <li>Operating Systems</li>
-        <li>Computer Organization and Architecture</li>
-        <li>Advanced Programming Practice</li>
-        <li>Design Thinking and Methodology</li>
-        <li>Professional Ethics</li>
-        <li>Probability and Queueing Theory</li>
+    <h3>Completed Courses</h3>
+    <ul>
         <li>Design and Analysis of Algorithms</li>
-        <li>Database Management Systems</li>
+        <li>Database Management System</li>
         <li>Artificial Intelligence</li>
         <li>Internet of Things</li>
-        <li>Social Engineering</li>
-        <li>Universal Human Values – II: Understanding Harmony and Ethical Human Conduct</li>
-        <li>Programming for Financial Technologies</li>
+    </ul>
+
+    <h3>Additional Courses</h3>
+    <ul>
+        <li>Java Programming for Beginners</li>
+        <li>Introduction to Prompt Engineering (Platform: Simplilearn)</li>
     </ul>
 </section>
 
@@ -119,41 +92,29 @@
     <h2>Projects</h2>
 
     <div class="project-card">
-        <h3>Java Food Delivery Order System</h3>
+        <h3>Smart Object Locator System using ESP32 with Dual Implementation Architecture</h3>
         <p>
-            Developed a food delivery ordering system using Java.
-            Implemented menu selection, order processing,
-            billing calculation, and user interaction features.
+            Developed a smart object tracking system using ESP32.
+            Implemented wireless communication and real-time tracking features.
         </p>
-        <p><strong>Technology Used:</strong> Java</p>
+        <p><strong>Tools Used:</strong> ESP32</p>
+    </div>
+
+    <div class="project-card">
+        <h3>Smart Street Light System</h3>
+        <p>
+            Designed an automated street lighting system that controls
+            brightness based on environmental conditions.
+        </p>
+        <p><strong>Tools Used:</strong> Arduino, LDR Sensor</p>
     </div>
 
 </section>
 
 <section>
-    <h2>Certifications</h2>
-
-    <p><strong>The Sustainable Development Goals - A Global Interdisciplinary Vision for the Future</strong></p>
-    <p>Platform: Coursera | Date: 11/02/2026</p>
-
-    <br>
-
-    <p><strong>Active Listening: Enhancing Communication Skills</strong></p>
-    <p>Platform: Coursera</p>
-
-    <br>
-
-    <p><strong>Introduction to Visual Basic Programming</strong></p>
-    <p>Platform: Coursera</p>
-
-</section>
-
-<section>
-    <h2>Achievements</h2>
+    <h2>Internship</h2>
     <ul>
-        <li>Participated in Hackathon</li>
-        <li>CodeCraft'25 Hackathon</li>
-        <li>NoobFest Startup Hackathon</li>
+        <li>Android Developer Virtual Internship</li>
     </ul>
 </section>
 
