--- a/index.html
+++ b/index.html
@@ -73,18 +73,12 @@
     <h2>Education</h2>
     <p><strong>CGPA:</strong> 8.61</p>
 
-    <h3>Completed Courses</h3>
+    <h3>Completed Core Subjects</h3>
     <ul>
         <li>Design and Analysis of Algorithms</li>
         <li>Database Management System</li>
         <li>Artificial Intelligence</li>
         <li>Internet of Things</li>
-    </ul>
-
-    <h3>Additional Courses</h3>
-    <ul>
-        <li>Java Programming for Beginners</li>
-        <li>Introduction to Prompt Engineering (Platform: Simplilearn)</li>
     </ul>
 </section>
 
@@ -92,21 +86,31 @@
     <h2>Projects</h2>
 
     <div class="project-card">
-        <h3>Smart Object Locator System using ESP32 with Dual Implementation Architecture</h3>
+        <h3>Smart Object Locator System using ESP32</h3>
         <p>
-            Developed a smart object tracking system using ESP32.
-            Implemented wireless communication and real-time tracking features.
+            Developed a wireless object locating system using ESP32 
+            to enable Bluetooth-based communication between a smartphone 
+            and the tracking device. Integrated buzzer and LED alert 
+            mechanisms to help users quickly identify misplaced objects. 
+            The system supports dual deployment modes (embedded module 
+            and portable keychain mode). Designed with low power 
+            consumption for battery operation and provides a 
+            cost-effective alternative to commercial tracking devices.
         </p>
-        <p><strong>Tools Used:</strong> ESP32</p>
+        <p><strong>Tools Used:</strong> ESP32, Bluetooth Module, Buzzer, LED, Embedded C</p>
     </div>
 
     <div class="project-card">
         <h3>Smart Street Light System</h3>
         <p>
-            Designed an automated street lighting system that controls
-            brightness based on environmental conditions.
+            Designed and implemented an automated smart street lighting 
+            system that adjusts brightness based on ambient light conditions 
+            using an LDR sensor. The system automatically turns ON during 
+            low light conditions and OFF during daylight to conserve energy. 
+            This project focuses on energy efficiency, automation, and 
+            sustainable urban infrastructure.
         </p>
-        <p><strong>Tools Used:</strong> Arduino, LDR Sensor</p>
+        <p><strong>Tools Used:</strong> Arduino Uno, LDR Sensor, LED Module, Resistors</p>
     </div>
 
 </section>
@@ -116,6 +120,32 @@
     <ul>
         <li>Android Developer Virtual Internship</li>
     </ul>
+</section>
+
+<section>
+    <h2>Certifications</h2>
+    <ul>
+        <li><strong>Java Programming for Beginners</strong> – Platform: Coursera</li>
+        <li><strong>Active Listening: Enhancing Communication Skills</strong> – Platform: Coursera</li>
+        <li><strong>Introduction to Visual Basic Programming</strong> – Platform: Coursera</li>
+        <li><strong>The Sustainable Development Goals - A Global Transdisciplinary Vision for the Future</strong> – Platform: Coursera</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Achievements</h2>
+
+    <p><strong>Awards:</strong></p>
+    <ul>
+        <li>Participated in Hackathon</li>
+    </ul>
+
+    <p><strong>Competitions:</strong></p>
+    <ul>
+        <li>CODECRAFT 25 Hackathon</li>
+        <li>Noobfest Startup Hackathon</li>
+    </ul>
+
 </section>
 
 <footer>
