--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
             Developed a wireless object locating system using ESP32 
             to enable Bluetooth-based communication between a smartphone 
             and the tracking device. Integrated buzzer and LED alert 
-            mechanisms to help users quickly identify misplaced objects. 
-            The system supports dual deployment modes (embedded module 
-            and portable keychain mode). Designed with low power 
-            consumption for battery operation and provides a 
-            cost-effective alternative to commercial tracking devices.
+            mechanisms for quick identification of misplaced objects. 
+            Supports dual deployment modes (embedded and keychain mode) 
+            with low power consumption for battery operation, providing 
+            a cost-effective alternative to commercial trackers.
         </p>
         <p><strong>Tools Used:</strong> ESP32, Bluetooth Module, Buzzer, LED, Embedded C</p>
     </div>
@@ -103,12 +102,10 @@
     <div class="project-card">
         <h3>Smart Street Light System</h3>
         <p>
-            Designed and implemented an automated smart street lighting 
-            system that adjusts brightness based on ambient light conditions 
-            using an LDR sensor. The system automatically turns ON during 
-            low light conditions and OFF during daylight to conserve energy. 
-            This project focuses on energy efficiency, automation, and 
-            sustainable urban infrastructure.
+            Designed an automated street lighting system that adjusts 
+            brightness based on ambient light conditions using an LDR sensor. 
+            The system improves energy efficiency by automatically turning 
+            lights ON at night and OFF during daylight.
         </p>
         <p><strong>Tools Used:</strong> Arduino Uno, LDR Sensor, LED Module, Resistors</p>
     </div>
@@ -129,23 +126,17 @@
         <li><strong>Active Listening: Enhancing Communication Skills</strong> – Platform: Coursera</li>
         <li><strong>Introduction to Visual Basic Programming</strong> – Platform: Coursera</li>
         <li><strong>The Sustainable Development Goals - A Global Transdisciplinary Vision for the Future</strong> – Platform: Coursera</li>
+        <li><strong>Introduction to Prompt Engineering</strong> – Platform: Simplilearn</li>
     </ul>
 </section>
 
 <section>
     <h2>Achievements</h2>
-
-    <p><strong>Awards:</strong></p>
     <ul>
         <li>Participated in Hackathon</li>
-    </ul>
-
-    <p><strong>Competitions:</strong></p>
-    <ul>
         <li>CODECRAFT 25 Hackathon</li>
         <li>Noobfest Startup Hackathon</li>
     </ul>
-
 </section>
 
 <footer>
